# master_thesis

./: .gitignore  Armenian.unicharset.txt  main.py  out.txt  outfile.txt  outfile_100_100.txt  outfile_250_250.txt  outfile_25_25.txt  outfile_50_50.txt
doc_to_image/: main.py
input_png_100_100/ֆ/: output.txt
output/ֆ/: ֆ.tif
output_png_125_125/Ա/: output.txt
output_png_50_50/ա/: output.txt
test/api_examples/basic_ocr/: CMakeLists.txt  main.cpp
test/api_examples/get_component_images/: CMakeLists.txt  main.cpp
test/output_exmaple/hye/: photo_with_phone_camera.txt
